tests/errors/missing-field.wit
@x
  - value: 1
x@

@y
  - sees @x.nonexistent
y@
